# reconstruct_mito_genome

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  clusters_metrics.txt  nodes_metrics.txt
annotate_mitochondrial_sequence/: Cargo.toml  README.md
assemble/: Cargo.toml  TODO.md
benchmark_dbg_hmm/: Cargo.toml  temp  times  times2
benchmark_dbg_hmm/scripts/: countkmer.job  coverage_and_contained.job  coverage_and_likelihood.R  coverage_and_likelihood.job  em_clustering.job  few_sample.job  length_and_accuracy.job  neutral_checker.job  number_of_edge_and_node.job  number_of_node_and_lk.job  plot_countkmer.R  plot_coverage_and_contained.R  plot_coverage_and_likelihood.R  plot_coverage_and_nodes.R  plot_em_clustering.R  plot_few_sample.R  plot_length_and_accuracy.R  plot_neutral_prediction.R  plot_number_of_edge_and_node.R  plots.sh  variant_calling.R
benchmark_poa_hmm/: Cargo.toml
benchmark_poa_hmm/script/: few_sample.job  length_and_accuracy.job  plot.sh  plot_few_sample.R  plot_variant_site.R
create_dataset_and_circos_plots/: Cargo.toml
create_simulation_data/: Cargo.toml  README.md  multi_test.txt  two_test_gibbs.tsv
create_simulation_data/script/: assemble.sh  cas_check.sh  check.sh  commands.sh  compare_aggregate_strategy.job  compare_aggregate_strategy_on_mockdata.job  complex1.job  coverage_and_likelihood.job  create_extreme_genome.sh  create_hard_genome.sh  create_mock_genome.sh  easy_mock.job  em_algorithm_check.job  generate_dataset.sh  last_decompose_aln.job  last_decompose_half.job  last_decompose_multi.job  last_decompose_two.job  last_decompose_varying_errorate.job  last_decompose_varying_errorate_local.job  long_extreme.sh  long_hard.job  merge_test.job  middle_hard.job  mock_genome_workflow.job  plot_clustering.R  plot_clustering.sh  plot_coverage_and_likelihood.R  plot_em_algorithm_check.R  plot_entropy.R  plot_errors.R  plot_likelihood_trajectry.R  plot_merge_test.R  plot_simulated_data.R  plot_test_last_decompose_two_logfile.R  plot_test_last_decompose_two_logfile.sh  plot_variable_chain_length.R  plots.sh  short_extreme.job  short_hard.job  (+10 more)
create_simulation_data/src/: lib.rs
dbg_hmm/: Cargo.toml  README.md
dbg_hmm/benches/: bench.rs
dbg_hmm/scripts/: length_and_accuracy.job
dbg_hmm/src/: *compilation*  config.rs  factory.rs  find_union.rs  gen_sample.rs  kmer.rs  lib.rs
de_bruijn_graph/: Cargo.toml
decompose_msa/: Cargo.toml  README.md  test.tsv
diluting_overlap/: Cargo.toml
diluting_overlap/script/: 2nd_plot.R  create_annotation.job  dilution_and_overlap.job  global_coverage.job  name_to_chromosome.awk  plot_global_coverages.R  re_map.job  select_based_on_global_cov.R
disassembly/: Cargo.toml  README.md  circos.js
edge_exposure/: Cargo.toml  README.md  log
error_correction/: Cargo.toml  README.md
error_correction/script/: MECAT2.job  diagonal.job
evaluate_assembly_from_alignment/: Cargo.toml  README.md
genome_servey/: Cargo.toml
guided_assembly/: Cargo.toml  README.md  test.sh
kmer-counting/: Cargo.toml  README.md
kmer-counting/script/: kmer_counting.job  plot.R
kmer-counting/src/: lib.rs  main.rs
kmer_tiling/: Cargo.toml  README.md  index.html
kmer_tiling/script/: drawer.js  flow.R  global_coverage_plot.R  global_coverage_plot.sh  hill_climbing.job  histo.job  job_template.job  local_coverage_plot.R  local_coverage_plot.sh  pick_exampler.job  round_count.job  sam_to_annotation.job  test.job  tiling.job
kmer_tiling/src/: lib.rs
last_decompose/: Cargo.toml  README.md
last_decompose/scripts/: drawer.js  enumerate_cr.job  forward_repeat.html  run.sh  run_MPI.job  run_on_mine.job  run_on_mine_repeat_trimed.job  template.html  test.sh  view_template.html  with_cr.html
last_decompose/src/: annotate_contigs_to_reference.rs  bipartite_matching.rs  d3_data.rs  de_bruijn_graph.rs  digamma.rs  eread.rs  error_profile.rs  find_breakpoint.rs  lib.rs  poa_clustering.rs  unit_clustering.rs  utils.rs  variant_calling.rs
last_decompose/src/assemble/: chunked_read.rs  correct_reads.rs  de_bruijn_graph.rs  ditch_graph.rs  mod.rs
last_decompose/src/assignments/: bipartite_matching.rs  dbg_hmms.rs  minimum_spanning_tree.rs  mod.rs
last_tiling/: Cargo.toml  README.md  log  rep  run.sh  run_cluster.sh
last_tiling/scripts/: drawer.js  run.sh  run_MPI.job  run_cluster.sh  run_forward_repeat.sh  run_on_mine.job  run_on_mine_repeat_trimed.job  run_on_reference.job  run_simulated.job  style.css  template.html  test.sh  view_template.html
last_tiling/src/: contig.rs  coverage.rs  find_breakpoint.rs  lasttab.rs  lib.rs  peak.rs  repeat.rs  unit.rs
last_tiling_analysis/: Cargo.toml
last_tiling_analysis/scripts/: run.sh  run_on_cluster.job
long_read_analysis_publicdata/: Cargo.toml  README.md  log  out
maf_tiling/: Cargo.toml  README.md
mito_assembler/: Cargo.toml  README.md
mito_assembler/scripts/: canu.job  complex1.sh  complex1_viewer.sh  drawer_lightweight.js  entropy.R  error_profile.job  job_template.job  mmmm.job  racon.job  reference_guided_workflow.job  run.sh  run_MPI.sh  run_pacbio.sh  run_simulated_data.job  run_with_reference.job  run_with_reference_MPI.job  template.html  test.job  test_yg.sh  workflow.job  yellow_gate.job
mito_assembler/src/: lib.rs  template.rs
poa_hmm/: Cargo.toml
poa_hmm/benches/: bench.rs
poa_hmm/src/: add_sequence.rs  base.rs  base_table.rs  config.rs  construct.rs  formatters.rs  forward.rs  gen_sample.rs  generate.rs  lib.rs  remove_nodes.rs  tests.rs
py_dbhmm/: Cargo.toml  README.md
py_hmm/: Cargo.toml
read_coverage_assembly/: Cargo.toml  README.md
read_filtering/: Cargo.toml  README.md
repeat_analysis/: Cargo.toml  README.md
run_length_encoding/: Cargo.toml
rusty-sandbox/: Cargo.toml  README.md
rusty-sandbox/bench/: select_nth.rs
rusty-sandbox/script/: error.sh  error_rate.job  error_rate_plot.R  simplify_graph.job  view.sh
rusty-sandbox/src/: lib.rs
script/: baseline_mock_genomes.job  benchmark.job  benchmark.sh  collect_result.sh  create_mock_genome.sh  disassembly.sh  disassembly_postprocess.sh  downloads_files.sh  linear.js  (+11 more)
(+197 files in other folders)
