[package]
name = "benchmark_poa_hmm"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

poa_hmm = {path = "../poa_hmm"}
edlib_sys = {path = "../../edlib-sys"}
rand = "*"
rand_xoshiro = "*"
rayon = "*"
log = "*"
env_logger = "*"
