[package]
name = "create_simulation_data"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio_utils = {path = "../bio_utils"}
rand = "*"
last_tiling = {path = "../last_tiling"}
last_decompose = {path = "../last_decompose"}
rayon = "*"
log = "*"
env_logger = "*"
poa_hmm = {path = "../poa_hmm"}
rand_xoshiro = "*"
