[package]
name = "dbg_hmm"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edlib_sys = {path = "../../edlib-sys"}
rand = "*"
log = "*"
env_logger = "*"
packed_simd = "*"
rand_xoshiro = "*"