[package]
name = "diluting_overlap"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "*"
rand = "0.6.5"
minimap2-rust = {path = "../../minimap2-rust"}
select_mitochondrial_genome = {path = "../select_mitochondrial_genome"}
rayon = "*"
libc = "0.2"