[package]
name = "error_correction"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "*"
edlib-sys = {path = "../../edlib-sys"}
libc = "*"
log = "*"
env_logger = "*"
rayon = "*"