[package]
name = "kmer-counting"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
run_length_encoding = {path = "../run_length_encoding"}
bio = "*"
metrohash = "*"
log = "*"
env_logger = "*"
rayon = "*"