[package]
name = "kmer_tiling"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "*"
handmade_bloom_filter = {"path" = "../../handmade_bloom_filter/"}
rand = "0.6.5"
rayon = "*"
log = "*"
env_logger = "*"
serde = { version =  "1.0", feature = ["derive"]}
serde_json = "*"
