[package]
name = "last_decompose"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio_utils = {path = "../../bio_utils"}
last_tiling = {path = "../last_tiling"}
dbg_hmm = {path = "../dbg_hmm"}
poa_hmm = {path = "../poa_hmm"}
edlib_sys = {path = "../../edlib-sys"}  
rand = "0.7.2"
log = "*"
env_logger = "*"
serde = "*"
serde_json = "*"
rayon = "*"
rand_xoshiro = "*"
nalgebra  = "*"