[package]
name = "last_tiling"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "*"
bio_utils = {path = "../../bio_utils"}
log = "*"
env_logger = "*"