[package]
name = "last_tiling_analysis"
version = "0.1.0"
authors = ["Masutani BANSHO <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bio_utils = {path = "../../bio_utils"}
log = "*"
env_logger = "*"
serde_json = "*"
last_tiling = {path = "../last_tiling"}