[package]
name = "mito_assembler"
version = "0.1.0"
authors = ["Masutani BANSHO <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio_utils = {path = "../bio_utils"}
last_tiling = {path = "../last_tiling"}
last_decompose = {path = "../last_decompose"}
rayon = "*"
log = "*"
env_logger = "*"
clap = "*"
serde = "*"
serde_json = "*"
md5 = "0.7.0"
definitions = {path = "../definitions"}