[package]
name = "poa_hmm"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
log = "*"
packed_simd = "*"
rand_xoshiro = "*"

[dev-dependencies]
rayon = "*"