[package]
name = "rusty-sandbox"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "*"
rust-htslib = "*"
bio_utils = {path = "../../bio_utils"}
suke = {path = "../../suke"}
rand = "0.7"
rayon = "*"
regex = "*"
twox-hash = "*"
fxhash = "*"
fnv = "*"
metrohash = "*"
highway = "*"
packed_simd = "*"